[gd_scene load_steps=7 format=2]

[ext_resource path="res://entities/bosses/BossCamera.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://assets/AUDIO/sounds/boss/boss_cutscene.ogg" type="AudioStream" id=3]

[sub_resource type="DynamicFontData" id=1]
override_oversampling = 5.0
font_path = "res://fonts/joystix monospace.ttf"

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = SubResource( 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 159, 54 )

[node name="BossCamera" type="Camera2D"]
zoom = Vector2( 0.9, 0.9 )
limit_bottom = 360
smoothing_enabled = true
smoothing_speed = 2.0
script = ExtResource( 1 )

[node name="Flash" type="Sprite" parent="."]
visible = false
modulate = Color( 100, 100, 100, 1 )
scale = Vector2( 8.29688, 5.1875 )
texture = ExtResource( 2 )

[node name="BossName" type="Label" parent="."]
margin_left = -74.0
margin_top = 13.0
margin_right = 74.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="ZoomTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScreenFlash" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="StopTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="FightStarter" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="FightStarter"]
position = Vector2( 0, -20 )
shape = SubResource( 3 )

[node name="CutsceneSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -2.0

[connection signal="timeout" from="ZoomTimer" to="." method="_on_ZoomTimer_timeout"]
[connection signal="timeout" from="ScreenFlash" to="." method="_on_ScreenFlash_timeout"]
[connection signal="timeout" from="StopTimer" to="." method="_on_StopTimer_timeout"]
[connection signal="area_entered" from="FightStarter" to="." method="_on_FightStarter_area_entered"]
